Nexus-server-deploy/nexus_protected.tf
data "template_file" "protected_user_data" {
  template = "${file("protected_user_data.sh")}"

}

resource "aws_instance" "protected_nexus_host" {
  ami           = "${lookup(var.AMIS, var.AWS_REGION)}"
  instance_type = "t2.medium"
  vpc_security_group_ids = ["${aws_security_group.nexus_host_sg.id}"]
  subnet_id              = "${module.mgmt_subnets.subnets[0]}"
  user_data = "${data.template_file.protected_user_data.rendered}"
  key_name = "${aws_key_pair.nexus_ssh.key_name}"
  iam_instance_profile = "${aws_iam_instance_profile.ec2_profile.name}"
  tags = "${merge(
    local.default_tags,
    map(
      "Name", "Nexus-Protected-registry"
    )
  )}"
}


resource "aws_eip" "two" {
  instance = "${aws_instance.protected_nexus_host.id}"
  vpc      = true
}
