Nexus-server-deploy/bastion.tf
data "template_file" "user_data" {
  template = "${file("user_data.sh")}"

}

resource "aws_instance" "nexus_host" {
  ami           = "${lookup(var.AMIS, var.AWS_REGION)}"
  instance_type = "t2.medium"
  vpc_security_group_ids = ["${aws_security_group.nexus_host_sg.id}"]
  subnet_id              = "${module.mgmt_subnets.subnets[0]}"
  user_data = "${data.template_file.user_data.rendered}"
  key_name = "${aws_key_pair.nexus_ssh.key_name}"
  iam_instance_profile = "${aws_iam_instance_profile.ec2_profile.name}"
  tags = "${merge(
    local.default_tags,
    map(
      "Name", "Nexus-PT-Tejas"
    )
  )}"
}

resource "aws_security_group" "nexus_host_sg" {
  name        = "nexus_host_sg"
  description = "Allow connection for host"
  vpc_id      = "${module.vpc.vpc_id}"

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 8081
    to_port   = 8081
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 8123
    to_port   = 8123
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = "${merge(
    local.default_tags,
    map(
      "Name", "Nexus-PT-demo_tejas"
    )
  )}"
}

resource "aws_key_pair" "nexus_ssh" {
  key_name   = "nexus_ssh"
  public_key = "${var.bastion_ssh_key}"
}


resource "aws_eip" "one" {
  instance = "${aws_instance.nexus_host.id}"
  vpc      = true

}
