Nexus-server-deploy/elb.tf

resource "aws_elb" "nexus-pt-elb" {
  name               = "nexus-docker-rce-lb"
  subnets = ["${module.mgmt_subnets.subnets[0]}", "${module.mgmt_subnets.subnets[1]}", "${module.mgmt_subnets.subnets[2]}"]
  security_groups = ["${aws_security_group.lb_sg.id}"]
  listener {
    instance_port     = 8081
    instance_protocol = "http"
    lb_port           = 443
    lb_protocol       = "https"
    ssl_certificate_id   = "arn:aws:acm:us-east-2:650143975734:certificate/aad88393-447c-465b-9347-3c974f0a4342"
  }

  listener {
    instance_port     = 8123
    instance_protocol = "http"
    lb_port           = 8123
    lb_protocol       = "https"
    ssl_certificate_id   = "arn:aws:acm:us-east-2:650143975734:certificate/aad88393-447c-465b-9347-3c974f0a4342"
  }

  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 12
    target              = "HTTP:8081/"
    interval            = 30
  }

  instances                   = ["${aws_instance.nexus_host.id}"]
  cross_zone_load_balancing   = true
  idle_timeout                = 400
  connection_draining         = true
  connection_draining_timeout = 300

  tags {
    Name = "nexus-pt-loadbalancer"
  }
}


resource "aws_elb" "nexus-protected-elb" {
  name               = "nexus-protected-lb"
  subnets = ["${module.mgmt_subnets.subnets[0]}", "${module.mgmt_subnets.subnets[1]}", "${module.mgmt_subnets.subnets[2]}"]
  security_groups = ["${aws_security_group.lb_sg.id}"]
  listener {
    instance_port     = 8081
    instance_protocol = "http"
    lb_port           = 443
    lb_protocol       = "https"
    ssl_certificate_id   = "arn:aws:acm:us-east-2:650143975734:certificate/aad88393-447c-465b-9347-3c974f0a4342"
  }

  listener {
    instance_port     = 8123
    instance_protocol = "http"
    lb_port           = 8123
    lb_protocol       = "https"
    ssl_certificate_id   = "arn:aws:acm:us-east-2:650143975734:certificate/aad88393-447c-465b-9347-3c974f0a4342"
  }

  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 12
    target              = "HTTP:8081/"
    interval            = 30
  }

  instances                   = ["${aws_instance.protected_nexus_host.id}"]
  cross_zone_load_balancing   = true
  idle_timeout                = 400
  connection_draining         = true
  connection_draining_timeout = 300

  tags {
    Name = "nexus-pt-loadbalancer"
  }
}

resource "aws_security_group" "lb_sg" {
  name        = "nexus-docker-pt-elb_sg"
  description = "Allow connection for host"
  vpc_id      = "${module.vpc.vpc_id}"

  ingress {
    from_port = 8123
    to_port   = 8123
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = "${merge(
    local.default_tags,
    map(
      "Name", "nexus_LB_tejas"
    )
  )}"
}

resource "aws_route53_record" "nexus_record" {
  name = "nexus.bryceindustries.net"
  type = "A"
  zone_id = "Z3BG9KM5T3LSEW"

  alias {
    name                   = "${aws_elb.nexus-pt-elb.dns_name}"
    zone_id                = "${aws_elb.nexus-pt-elb.zone_id}"
    evaluate_target_health = false
  }
}

resource "aws_route53_record" "protected_nexus_record" {
  name = "securenexus.bryceindustries.net"
  type = "A"
  zone_id = "Z3BG9KM5T3LSEW"

  alias {
    name                   = "${aws_elb.nexus-protected-elb.dns_name}"
    zone_id                = "${aws_elb.nexus-protected-elb.zone_id}"
    evaluate_target_health = false
  }
}
